Change the buttons and links color from black to blue

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -85,9 +85,9 @@ const features = [
 						<dd class="mt-4 flex flex-auto flex-col text-base leading-7 text-gray-900 dark:text-gray-100">
 							<p class="flex-auto">{t(item.description)}</p>
 							<p class="mt-6">
-								<Link href={item.url} style="muted" size="xs" class="leading-6 text-left text-black dark:text-white">
+								<Link href={item.url} style="muted" size="xs" class="leading-6 text-left text-[#2490EF] dark:text-white">
 									{t("features.learn_more")}{" "}
-									<span class="pl-1 text-black dark:text-white" aria-hidden="true">
+									<span class="pl-1 text-[#2490EF] dark:text-white" aria-hidden="true">
 										→
 									</span>
 								</Link>
