--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Button from "@components/ui/button.astro";
-import Contactform from "@components/contactform.astro";
+// import Contactform from "@components/contactform.astro";
 
 changeLanguage("en");
 
@@ -33,7 +33,7 @@ let contacts = [
 ];
 ---
 
-<Layout title="Contact">
+<Layout title="Contact" lang="en">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Contact</Fragment>
