--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -40,19 +40,19 @@ const { dynamic = false } = Astro.props;
 					{t("hero.subtitle")}
 				</p>
 				<div class="mt-10 flex items-center justify-center gap-x-2 md:gap-x-6">
-					<Link href="https://github.com/warpsi/astros">{t("hero.main_button_text")}</Link>
+					<Link class='bg-[#2490EF]' href="https://github.com/warpsi/astros">{t("hero.main_button_text")}</Link>
 					{
 						dynamic ? (
-							<Link href="/" style="muted">
+							<Link href="/" style="muted" class="bg-[#2490EF]">
 								{t("hero_animated.secondary_button_text")}
-								<span aria-hidden="true" class="pl-1 text-black dark:text-white">
+								<span aria-hidden="true" class="pl-1 text-[#2490EF] dark:text-white">
 									→
 								</span>
 							</Link>
 						) : (
-							<Link href="/animated" style="muted">
+							<Link href="/animated" style="muted" class='text-[#2490EF]'>
 								{t("hero.secondary_button_text")}
-								<span aria-hidden="true" class="pl-1 text-black dark:text-white">
+								<span aria-hidden="true" class="pl-1 text-[#2490EF] dark:text-white">
 									→
 								</span>
 							</Link>
