--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -5,13 +5,13 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Button from "@components/ui/button.astro";
-import Contactform from "@components/contactform.astro";
+// import Contactform from "@components/contactform.astro";
 import Signin from "@components/signin.astro";
 
 changeLanguage("en");
 ---
 
-<Layout title="Login">
+<Layout title="Login" lang="en">
 	<Container>
 		<Signin />
 	</Container>
