--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -3,7 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Pricing from "@components/pricing.astro";
+// import Pricing from "@components/pricing.astro";
 import Logos from "@components/logos.astro";
 import Faq from "@components/faq.astro";
 
@@ -55,7 +55,7 @@ const pricingData = [
 ];
 ---
 
-<Layout title="Pricing">
+<Layout title="Pricing" lang="en">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Pricing</Fragment>
