--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -17,7 +17,7 @@ const sizes = {
 
 const styles = {
 	outline: "border-2 border-black hover:bg-black text-black hover:text-white",
-	primary: "bg-[#0C0A09] text-white dark:bg-white dark:text-black dark:hover:bg-slate-100 hover:bg-slate-900 border-2 border-transparent",
+	primary: "bg-[#2490EF] text-white dark:bg-white dark:text-black dark:hover:bg-slate-100 hover:bg-slate-900 border-2 border-transparent",
 	link: "text-stone-950 font-semibold text-sm text-center transition hover:text-gray-900 focus:text-gray-900 focus:bg-gray-200 focus:outline-none focus:shadow-outline hover:bg-gray-200 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-white",
 };
 ---
