change the header titles

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -4,26 +4,23 @@ import Button from "@components/ui/button.astro";
 import { Icon } from "astro-icon";
 import { localizePath } from "astro-i18next";
 import { t } from "i18next";
+import Languageselector from "@components/languageselector.astro";
 
 export const menuitems = [
 	{
-		title: "Sub items",
-		children: [
-			{ title: "Subitem 1", path: "#" },
-			{ title: "Subitem 2", path: "#" },
-			{ title: "Subitem 3", path: "#" },
-		],
+		title: "ERPNext ",
+
 	},
 	{
-		title: "header.princing",
+		title: "header.inplementation",
 		path: "/pricing",
 	},
 	{
-		title: "header.blog",
+		title: "header.invoicing",
 		path: "/blog",
 	},
 	{
-		title: "header.contact",
+		title: "header.accounting",
 		path: "/contact",
 	},
 ];
@@ -35,9 +32,8 @@ export const menuitems = [
 	<div class="p-4 flex flex-row items-center justify-between">
 		<a
 			href={localizePath("/")}
-			class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
-			<Icon name="logo" width="30" class="dark:invert" alt="Logo"></Icon>
-			Astros
+			class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
+			Monolithon - ERPNext solutions
 		</a>
 		<button class="md:hidden text-gray-500 w-10 h-10 relative focus:outline-none" @click="open = !open">
 			<span class="sr-only">Open main menu</span>
@@ -73,59 +69,7 @@ export const menuitems = [
 		<div class="flex flex-col flex-grow text-center gap-2 md:justify-center md:items-center md:flex md:flex-row md:mx-auto">
 			{
 				menuitems.map((item) =>
-					item.children && item.children.length ? (
-						<div @click.away="open = false" class="relative" x-data="{ open: false }">
-							<Button @click="open = !open" style="link" size="sm" class="mt-[2px]">
-								{t(item.title)}
-								<svg
-									fill="currentColor"
-									viewBox="0 0 20 20"
-									:class="{'rotate-180': open, 'rotate-0': !open}"
-									class="inline w-4 h-4 mb-[2px] transition-transform duration-200 transform">
-									<path
-										fill-rule="evenodd"
-										d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-										clip-rule="evenodd">
-									</path>
-								</svg>
-							</Button>
-							<div
-								x-show="open"
-								x-transition:enter="transition ease-out duration-100"
-								x-transition:enter-start="transform opacity-0 scale-95"
-								x-transition:enter-end="transform opacity-100 scale-100"
-								x-transition:leave="transition ease-in duration-75"
-								x-transition:leave-start="transform opacity-100 scale-100"
-								x-transition:leave-end="transform opacity-0 scale-95"
-								class="absolute mt-2 bg-white right-0 w-full origin-top-right rounded-md md:w-48 outline-2 border border-gray-300">
-								<div class="px-2 py-2 rounded-md shadow dark:bg-gray-800">
-									{ item.children.map((subitem) =>
-										<Link
-											href={localizePath(subitem.path)}
-											style="hover"
-											size="sm"
-											class="block"
-											x-data="{ isActive: false }"
-											x-init={`() => {
-												const path = $el.getAttribute('data-path');
-												const checkPath = () => {
-													isActive = window.location.pathname === path ||
-																window.location.pathname === path + '/' ||
-																window.location.pathname === '/it' + path ||
-																window.location.pathname === '/it' + path + '/';
-												};
-												checkPath();
-												window.addEventListener('popstate', checkPath);
-											}`}
-											:class="{ 'bg-gray-200 dark:bg-gray-600': isActive }"
-										>
-											{subitem.title}
-										</Link>
-									)}
-								</div>
-							</div>
-						</div>
-					) : (
+					 (
 						<Link
 							href={localizePath(item.path)}
 							style="hover"
@@ -136,8 +80,8 @@ export const menuitems = [
 								const checkPath = () => {
 									isActive = window.location.pathname === path ||
 												window.location.pathname === path + '/' ||
-												window.location.pathname === '/it' + path ||
-												window.location.pathname === '/it' + path + '/';
+												window.location.pathname === '/hu' + path ||
+												window.location.pathname === '/hu' + path + '/';
 								};
 								checkPath();
 								window.addEventListener('popstate', checkPath);
@@ -152,9 +96,11 @@ export const menuitems = [
 			}
 		</div>
 		<div class="mt-4 md:mt-0 flex flex-col md:flex-row gap-4">
-			<Link href="/login" style="outline" class="md:px-3 md:py-2 leading-6">
-				{t("header.secondary_button_text")}
-			</Link>
+			<Languageselector
+			showFlag={false}
+			languageMapping={{ en: "English", hu: "Hungarian " }}
+			class="appearance-none py-1 px-2 rounded bg-slate-100 dark:bg-stone-950"
+		/>
 			<Link href="https://github.com/warpsi/astros" class="md:px-3 md:py-2 leading-6">
 				{t("header.primary_button_text")}
 			</Link>
