--- a/src/pages/hu/404.astro
+++ b/src/pages/hu/404.astro
@@ -3,7 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@layouts/Layout.astro";
 import { localizePath } from "astro-i18next";
 
-changeLanguage("it");
+changeLanguage("hu");
 
 const title = `Error 404`;
 ---
