--- a/src/pages/hu/[...blog]/[...page].astro
+++ b/src/pages/hu/[...blog]/[...page].astro
@@ -7,7 +7,7 @@ import Posts from "@components/blog/posts.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Pagination from "@components/blog/pagination.astro";
 
-changeLanguage("it");
+changeLanguage("hu");
 
 export async function getStaticPaths({ paginate }) {changeLanguage('it')
     var posts = await getCollection("blog", ({ data }) => {
