--- a/src/pages/hu/about.astro
+++ b/src/pages/hu/about.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 
-changeLanguage("it");
+changeLanguage("hu");
 
 // Filter team entries with 'draft: false' & date before current date
 const publishedTeamMembers = await getCollection("team", ({ data }) => {
