--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -7,7 +7,7 @@ import Hero from "@components/hero.astro";
 import Newsletter from "@components/newsletter.astro";
 import Layout from "@layouts/Layout.astro";
 
-changeLanguage("it");
+changeLanguage("hu");
 ---
 
 <Layout>
