--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,7 +12,7 @@ export const menuitems = [
 
 	},
 	{
-		title: "header.inplementation",
+		title: "header.implementation",
 		path: "/pricing",
 	},
 	{
