--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -2,7 +2,7 @@
 import { LanguageSelector } from "astro-i18next/components";
 import { Icon } from "astro-icon";
 
-const { icon = "", languageMapping = { en: "English", hu: "Hungarian " }, ...rest } = Astro.props;
+const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest } = Astro.props;
 ---
 
 <div
