--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -34,7 +34,7 @@ export const menuitems = [
 	<div class="p-4 flex flex-row items-center justify-between">
 		<a
 			href={localizePath("/")}
-			class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
+			class="flex gap-3 items-center text-[18px] text-gray-900 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
 			{t(logo)}
 		</a>
 		<button class="md:hidden text-gray-500 w-10 h-10 relative focus:outline-none" @click="open = !open">
