--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -30,7 +30,7 @@ export const menuitems = [
 
 <div
 	x-data="{open: window.innerWidth < 768 ? false : true}"
-	class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-2 lg:px-0 z-10 md:pt-2 relative">
+	class="flex flex-col max-w-screen-xl py-2 px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-2 lg:px-0 z-10 md:pt-2 relative">
 	<div class="p-4 flex flex-row items-center justify-between">
 		<a
 			href={localizePath("/")}
