remove bg gray in active buttons

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -88,7 +88,7 @@ export const menuitems = [
 								checkPath();
 								window.addEventListener('popstate', checkPath);
 							}`}
-							:class="{ 'bg-gray-200 dark:bg-gray-600': isActive }"
+							:class="{ 'text-[#2490EF] dark:bg-[#2490EF]': isActive }"
 							data-path={item.path}
 						>
 							{t(item.title)}
