--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -25,7 +25,7 @@ const styles = {
 	primary:
 		"text-center bg-[#2490EF] outline-2 dark:bg-gray-100 hover:bg-[#2490EF]/80 dark:hover:bg-white focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 text-white dark:text-black border-transparent active:outline shadow-sm",
 	muted: "text-sm font-semibold leading-6 text-[#2490EF] dark:text-gray-100",
-	hover: "text-center text-stone-950 hover:text-[#2490EF] focus:text-gray-900 focus:outline-none focus:shadow-outline dark:focus:text-white dark:hover:text-[#2490EF] dark:text-[#2490EF]",
+	hover: "text-center text-stone-950 hover:text-[#2490EF] focus:text-[#2490EF] focus:outline-none focus:shadow-outline dark:focus:text-white dark:hover:text-[#2490EF] dark:text-[#2490EF]",
 };
 ---
 
