[FIX] change author to Admin

--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -49,8 +49,8 @@ const  page  = localizedPosts;
 <Layout title="Blog" lang="hu">
 	<Container>
 		<Sectionhead>
-			<Fragment slot="title">Our Blog</Fragment>
-			<Fragment slot="desc">Discover Industry Insights, Company News, and Expert Opinions.</Fragment>
+			<Fragment slot="title">ERPNext és Frappe hírek</Fragment>
+			<Fragment slot="desc">ERPNext és a Frappe hírek magyarul.</Fragment>
 		</Sectionhead>
 		<Posts posts={page} />
 		<!-- <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} /> -->
