--- a/src/pages/hu/[...blog]/[tag]/[...page].astro
+++ b/src/pages/hu/[...blog]/[tag]/[...page].astro
@@ -7,9 +7,9 @@ import Posts from "@components/blog/posts.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Pagination from "@components/blog/pagination.astro";
 
-changeLanguage("it");
+changeLanguage("hu");
 
-export async function getStaticPaths({ paginate }) {changeLanguage('it')
+export async function getStaticPaths({ paginate }) {changeLanguage('hu')
     const posts = await getCollection("blog", ({ data }) => {
         return !data.draft && data.publishDate < new Date();
     });
@@ -32,7 +32,7 @@ export async function getStaticPaths({ paginate }) {changeLanguage('it')
 const { page, tag } = Astro.props;
 ---
 
-<Layout title="Blog">
+<Layout title="Blog" lang="hu">
   <Container>
     <Sectionhead>
       <Fragment slot="title">#{tag}</Fragment>
