--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -10,18 +10,19 @@ import { getArticleReadingTime } from "@utils/blog";
 changeLanguage("hu");
 
 // Generate a new path for every collection entry
-export async function getStaticPaths() {changeLanguage('hu')
-    const blogEntries = await getCollection("blog");
-    return blogEntries.map((entry) => {
-        let slug = entry.slug;
-        if (i18next.language == "en" && slug.startsWith("en/")) {
-            slug = slug.substring(3);
-        }
-        return {
-            params: { blog: slug },
-            props: { entry, lang: i18next.language },
-        };
-    });
+export async function getStaticPaths() {
+	changeLanguage("hu");
+	const blogEntries = await getCollection("blog");
+	return blogEntries.map((entry) => {
+		let slug: any = entry.slug;
+		if (i18next.language == "hu" && slug.startsWith("hu/")) {
+			slug = slug.substring(3);
+		}
+		return {
+			params: { blog: slug },
+			props: { entry, lang: i18next.language },
+		};
+	});
 }
 // Get the entry directly from the prop on render
 const { entry, lang } = Astro.props;
@@ -31,12 +32,13 @@ const readTime = getArticleReadingTime(entry.body);
 
 <Layout title={entry.data.title} lang={lang}>
 	<Container>
+
 		<div class="mx-auto prose prose-lg dark:prose-invert mt-14">
 			<a
-				href={localizePath(`/category/${entry.data.category?.toLowerCase()}`)}
-				class="text-blue-400 dark:text-stone-400 uppercase tracking-wider text-sm font-medium no-underline">
-				{entry.data.category}
-			</a>
+			href={localizePath(`hu/category/${entry.data.category?.toLowerCase()}`)}
+			class="text-blue-400 dark:text-stone-400 uppercase tracking-wider text-sm font-medium no-underline">
+			{entry.data.category}
+		</a>
 			<h1 class="text-4xl mb-3 lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight dark:text-white">
 				{entry.data.title}
 			</h1>
@@ -44,7 +46,7 @@ const readTime = getArticleReadingTime(entry.body);
 				<div class="w-full md:w-auto flex flex-wrap gap-3">
 					{
 						entry.data.tags.map((tag) => (
-							<a href={localizePath(`/tag/${tag}`)} class="text-sm text-gray-500 dark:text-stone-300">
+							<a href={localizePath(`hu/tag/${tag}`)} class="text-sm text-gray-500 dark:text-stone-300">
 								#{tag}
 							</a>
 						))
@@ -79,27 +81,26 @@ const readTime = getArticleReadingTime(entry.body);
 		</div>
 		<div
 			class="mx-auto prose prose-lg dark:prose-invert mt-20"
-			x-data="{
-				initGiscus: function() {
-					let script = document.createElement('script');
-					script.src = 'https://giscus.app/client.js';
-					script.dataset.repo = 'warpsi/astros';
-					script.dataset.repoId = 'R_kgDOGa6DOg';
-					script.dataset.category = 'Blog';
-					script.dataset.categoryId = 'DIC_kwDOGa6DOs4CXazF';
-					script.dataset.mapping = 'pathname';
-					script.dataset.strict = '0';
-					script.dataset.reactionsEnabled = '1';
-					script.dataset.emitMetadata = '0';
-					script.dataset.inputPosition = 'top';
-					script.dataset.theme = localStorage.theme == 'dark' ? 'dark' : localStorage.theme == 'light' ? 'light' : 'preferred_color_scheme';
-					script.dataset.lang = 'en';
-					script.dataset.loading = 'lazy';
-					script.crossOrigin = 'anonymous';
-					script.async = true;
-					this.$el.appendChild(script);
-				}
-			}"
+			x-data={`${{initGiscus: function() {
+				let script = document.createElement('script');
+				script.src = 'https://giscus.app/client.js';
+				script.dataset.repo = 'warpsi/astros';
+				script.dataset.repoId = 'R_kgDOGa6DOg';
+				script.dataset.category = 'Blog';
+				script.dataset.categoryId = 'DIC_kwDOGa6DOs4CXazF';
+				script.dataset.mapping = 'pathname';
+				script.dataset.strict = '0';
+				script.dataset.reactionsEnabled = '1';
+				script.dataset.emitMetadata = '0';
+				script.dataset.inputPosition = 'top';
+				script.dataset.theme = localStorage.theme == 'dark' ? 'dark' : localStorage.theme == 'light' ? 'light' : 'preferred_color_scheme';
+				script.dataset.lang = 'en';
+				script.dataset.loading = 'lazy';
+				script.crossOrigin = 'anonymous';
+				script.async = true;
+				this.$el.appendChild(script);
+			}
+		}}`}
 			x-init="initGiscus()">
 		</div>
 	</Container>
