--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const buildDate = __DATE__;
 
 const { title, lang = null } = Astro.props;
 
-const makeTitle = title ? title + " | " + "Astros" : "Astros - Starter Template for Astro with Tailwind CSS";
+const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext solutions";
 ---
 
 <!DOCTYPE html>
@@ -29,7 +29,7 @@ const makeTitle = title ? title + " | " + "Astros" : "Astros - Starter Template 
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/monolithon-fav.png" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="theme-color" content="#ffffff">
 		<HeadHrefLangs />
@@ -45,11 +45,11 @@ const makeTitle = title ? title + " | " + "Astros" : "Astros - Starter Template 
 				basic: {
 					url: canonicalURL,
 					type: "website",
-					title: `Astros - Starter Template for Astro`,
+					title: `Monolithon`,
 					image: resolvedImageWithDomain,
 				},
 				image: {
-					alt: "Astros Homepage Screenshot",
+					alt: "Monolithon Homepage Screenshot",
 				},
 			}}
 		/>
