--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -61,7 +61,7 @@ export const menuitems = [
 				)
 			}
 		</ul>
-		<div class="m-auto mt-4 flex w-max items-center justify-between space-x-4 text-gray-500 dark:text-white">
+		<!-- <div class="m-auto mt-4 flex w-max items-center justify-between space-x-4 text-gray-500 dark:text-white">
 			<a class="duration-300 hover:text-gray-900 dark:hover:text-gray-100" href="#" title="twitter" target="blank" aria-label="twitter">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="m-auto h-5 w-5" viewBox="0 0 16 16">
 					<path
@@ -86,7 +86,7 @@ export const menuitems = [
 		</div>
 		<div class="flex justify-center mt-12 gap-3">
 			<ThemeSelector />
-		</div>
+		</div> -->
 		<div class="mt-4 text-center">
 			<span class="text-sm tracking-wide text-gray-500 dark:text-white">Copyright © Your Company 2023 - Present. All rights reserved</span>
 		</div>
