create empty page for all the footer items

--- a/src/pages/hu/jogok.astro
+++ b/src/pages/hu/jogok.astro
@@ -6,10 +6,10 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="hu" title="jogok">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Számlázás</h1>
+			<h1 class=" text-3xl">jogok</h1>
 		</div>
 	</Container>
 </Layout>
