--- a/src/pages/monolithon.astro
+++ b/src/pages/monolithon.astro
@@ -3,13 +3,13 @@ import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 
-changeLanguage("hu");
+changeLanguage("en");
 ---
 
 <Layout lang="en" title="ERPnext">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Könyvelés</h1>
+			<h1 class=" text-3xl">Monolithon</h1>
 		</div>
 	</Container>
 </Layout>
