--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,6 @@ import ThemeSelector from "@components/themeselector.astro";
 import { t } from "i18next";
 
 
-
 export const menuitems = [
 	{
 		title: "ERPNext ",
@@ -14,31 +13,31 @@ export const menuitems = [
 	},
 	{
 		title: "footer.login",
-		path: "/pricing",
+		path: "path_footer.login",
 	},	{
 		title: "footer.monolithon",
-		path: "/pricing",
+		path: "path_footer.monolithon",
 	},
 	{
 		title: "footer.softwares",
-		path: "/pricing",
+		path: "path_footer.softwares",
 	},
 
 	{
 		title: "footer.support",
-		path: "/blog",
+		path: "path_footer.support",
 	},
 	{
 		title: "footer.knowledge",
-		path: "/pricing",
+		path: "path_footer.knowledge",
 	},
 	{
 		title: "footer.partners",
-		path: "/pricing",
+		path: "path_footer.partners",
 	},
 	{
 		title: "footer.legal",
-		path: "/contact",
+		path: "path_footer.legal",
 	},
 ];
 ---
@@ -62,7 +61,7 @@ export const menuitems = [
 						item &&
 						item.path && (
 							<li role="listitem">
-								<a href={localizePath(item.path)} class="duration-300 font-medium capitalize hover:text-gray-900 dark:hover:text-gray-100">
+								<a href={localizePath(t(item.path))} class="duration-300 font-medium capitalize hover:text-gray-900 dark:hover:text-gray-100">
 									{t(item.title)}
 								</a>
 							</li>
