Disable automatic capital letter in titles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 	<body class="dark:bg-stone-950">
 		<Navbar />
 		<hr/>
-		<div class="lowercase">
+		<div>
 				<slot />
 		</div>
 		<Footer />
