--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -61,7 +61,7 @@ export const menuitems = [
 						item &&
 						item.path && (
 							<li role="listitem">
-								<a href={localizePath(t(item.path))} class="duration-300 font-medium capitalize hover:text-gray-900 dark:hover:text-gray-100">
+								<a href={localizePath(t(item.path))} class="duration-300 font-medium hover:text-gray-900 dark:hover:text-gray-100">
 									{t(item.title)}
 								</a>
 							</li>
