--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const  page  = localizedPosts;
 <Layout title="Blog" lang="en">
 	<Container>
 		<Sectionhead>
-			<Fragment slot="title">ERPNext and Frappe News</Fragment>
+			<Fragment slot="title">ERPNext and frappe news</Fragment>
 			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
 		</Sectionhead>
 		<Posts posts={page} />
