--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,6 +6,7 @@ import ThemeSelector from "@components/themeselector.astro";
 import { t } from "i18next";
 
 
+const footerDetails = 'footer.details'
 export const menuitems = [
 	{
 		title: "ERPNext ",
@@ -97,7 +98,7 @@ export const menuitems = [
 		</div> -->
 		<div class="mt-4 text-center flex flex-col">
 			<span class="text-base tracking-wide text-gray-500 dark:text-white">© Monolithon - Monolith Online - ERPNext & Frappe support</span>
-			<span class="text-sm tracking-wide text-gray-400 dark:text-white">Public advertisements do not constitute an offer</span>
+			<span class="text-sm tracking-wide text-gray-400 dark:text-white">{t(footerDetails)}</span>
 
 		</div>
 	</div>
