--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,7 +1,7 @@
 <body>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.css">
-<script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js"></script>
-<script>
+<script type="text/partytown" defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js"></script>
+<script  >
   window.addEventListener('load', () => {
 
       const cc = initCookieConsent();
