--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -97,8 +97,8 @@ export const menuitems = [
 			<ThemeSelector />
 		</div> -->
 		<div class="mt-4 text-center flex flex-col">
-			<span class="text-base tracking-wide text-gray-500 dark:text-white">© Monolithon - Monolith Online - ERPNext & Frappe support</span>
-			<span class="text-sm tracking-wide text-gray-400 dark:text-white">{t(footerDetails)}</span>
+			<span class="text-base tracking-wide text-gray-500 dark:text-white">© Monolithon - Monolith Online - ERPNext & Frappe support - {t(footerDetails)}</span>
+			<span class="text-sm tracking-wide text-gray-400 dark:text-white"></span>
 
 
 		</div>
