--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -34,11 +34,15 @@ const readTime = getArticleReadingTime(entry.body);
 	<Container>
 
 		<div class="mx-auto prose prose-lg dark:prose-invert mt-14">
-			<a
-			href={localizePath(`hu/category/${entry.data.category?.toLowerCase()}`)}
-			class="text-blue-400 dark:text-stone-400 uppercase tracking-wider text-sm font-medium no-underline">
-			{entry.data.category}
-		</a>
+			{
+				entry?.data.category.map(cat=>(
+				<a
+				href={localizePath(`/category/${cat?.toLowerCase()}`)}
+				class="text-blue-400 dark:text-stone-400 uppercase tracking-wider text-sm font-medium no-underline">
+				{cat}
+			</a>
+				))
+			}
 			<h1 class="text-4xl mb-3 lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight dark:text-white">
 				{entry.data.title}
 			</h1>
