--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -3,66 +3,53 @@ import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import Image from "astro/components/Image.astro";
-import Link from "@components/ui/link.astro";
-
-changeLanguage("en");
+changeLanguage("hu");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="hu" title="ERPnext">
 	<Container>
 		<div class="px-5">
 			<div class="flex justify-between items-center h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">Monolithon is the sure foundation.</h1>
-					<h2 class="text-xl text-gray-500 my-4">ERPNext and Frappe in English.</h2>
+					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">Monolithon a biztos alap.</h1>
+					<h2 class="text-xl text-gray-500 my-4">ERPNext és Frappe angolul.</h2>
 					<a href="/contact">
-						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-28 h-12 text-xl">Talk!</button>
+						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-28 h-12 text-xl">Beszéljünk!</button>
 					</a>
 				</div>
 				<div>
-					<img class="w-[40vw]" src="erpnextImage.png" alt="" />
+					<img class="w-[40vw]" src="../../../public/erpnextImage.png" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
 				<section class="py-8 px-4 w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">ERPNext is the only truly free and open source, complete ERP</h2>
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<ul class="list-disc ml-10 space-y-5 text-[#192734]">
 						<li>
-							If you are looking for ERP, then you are in the right place, because on these pages we will soon introduce you to ERPNext
-							in detail.
+							Ha vállalatirányítási rendszert keresel, akkor jó helyen jársz, mert ezeken az oldalakon hamarosan részletesen bemutatjuk neked az ERPNext-et.
 						</li>
 						<li>
-							If you're shaken out by the cold, you're in luck because with ERPNext you've found modern software that doesn't look like
-							the bad memory of old ERP systems.
+							Ha hidegen ráz a gondolattól, hogy régi vállalatirányítási rendszerekre emlékeztető szoftvert kell használnod, akkor szerencsés vagy, mert az ERPNext modern szoftver, ami nem idézi fel a múlt kellemetlen emlékeit.
 						</li>
 						<li>
-							If you don't know what ERP is, ERPNext is your point for Next, which suggests that it is one of the most modern in
-							business software.
+							Ha nem tudod, hogy mi az az ERP, az ERPNext a következő pontra utal, ami azt sugallja, hogy az egyik legmodernebb üzleti szoftver.
 						</li>
 					</ul>
 				</section>
 
 				<section class="py-8 px-4 w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">ERPNext is the only truly free and open source, complete ERP</h2>
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
-						ERPNext is basically a business software that makes the everyday life of a business easier and transparent. But - just to
-						highlight one function - it can even be used to manage several companies at once, where the company can even be a person.
-						Thus, transactions between different structures can be easily tracked using the system. For example, executive wages are
-						income as individuals, but costs on the company's side. In this way, personal and corporate finances and their interconnection
-						become transparent. But another good example of personal use is the tracking and managing daily, occasional, recurring project
-						tasks and tasks. (which may also have an income or expenditure side). In addition to business use, it is also essential for
-						personal use to manage documents related to finances or tasks, which is also easy to do in the ERPNext system. Some problems
-						in all areas of life for which ERPNext offers a simple solution. The areas covered by other ERPNext and their operation are
-						continuously published on the Hungarian ERPNext website, here at monolithon.com
+						Az ERPNext alapvetően egy vállalatirányítási rendszer, ami megkönnyíti és átláthatóbbá teszi a vállalkozás mindennapjait. De - csak egy funkciót említve - akár több vállalat egyidejű kezelésére is használható, ahol a vállalat akár egy személy is lehet. Így könnyen követhetők az eltérő struktúrák közötti tranzakciók a rendszer segítségével. Például a vezetői bér költséget jelenthet egyénnek, de bevételt a vállalat számára. Így átláthatóvá válnak a személyes és vállalati pénzügyek és azok összekapcsolódása. De egy másik jó példa a személyes felhasználásra a napi, alkalmi, visszatérő projektfeladatok és tevékenységek követése és kezelése (amelyeknek szintén lehetnek bevétel vagy kiadási oldala). A vállalati felhasználás mellett az ERPNext a személyes használathoz is nélkülözhetetlen, amikor a pénzügyekkel vagy feladatokkal kapcsolatos dokumentumok kezeléséről van szó, amit az ERPNext rendszerben könnyedén meg lehet tenni. Néhány problémára pedig egyszerű megoldást kínál az ERPNext az élet minden területén. Az egyéb ERPNext által lefedett területek és működésük folyamatosan megjelennek a magyar ERPNext weboldalon, itt a monolithon.com-on.
 					</p>
 				</section>
 
 				<section class="py-8 items-center px-4 bg-[#EEF0F2] rounded-xl flex justify-between w-full">
 					<div>
-						<h2 class="my-3 text-[30px] text-[#192734] font-bold">You don't need more business management software.</h2>
-						<span class="text-[#192734]">ERPNext is the solid foundation.</span>
+						<h2 class="my-3 text-[30px] text-[#192734] font-bold">Nem kell több üzleti irányítási szoftver.</h2>
+						<span class="text-[#192734]">Az ERPNext az erős alap.</span>
 					</div>
-					<a href="/contact" class=" cursor-pointer text-2xl font-semibold text-gray-700" >Talk! > </a>
+					<a href="/contact" class=" cursor-pointer text-2xl font-semibold text-gray-700" >Beszéljünk! > </a>
 				</section>
 			</div>
 		</div>
