--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -2,11 +2,9 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import Image from "astro/components/Image.astro";
-import Link from "@components/ui/link.astro";
-import HeroERPNEXT from "../components/erpnext/HeroERPNext.astro";
-import MainERPNEXT from "../components/erpnext/MainERPNEXT.astro";
-import TalkERPNEXT from "../components/erpnext/TalkERPNext.astro";
+import HeroERPNEXT from "@components/erpnext/HeroERPNext.astro";
+import MainERPNEXT from "@components/erpnext/MainERPNEXT.astro";
+import TalkERPNEXT from "@components/erpnext/TalkERPNext.astro";
 
 changeLanguage("en");
 ---
