--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -36,7 +36,7 @@ export const menuitems = [
 			class="flex gap-3 items-center text-[18px] text-gray-900 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
 			{t(logo)}
 		</a>
-		<button class="md:hidden text-gray-500 w-10 h-10 relative focus:outline-none" @click="open = !open">
+		<button id="menuToggle" class="md:hidden text-gray-500 w-10 h-10 relative focus:outline-none">
 			<span class="sr-only">Open main menu</span>
 			<div class="block w-5 absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2">
 				<span
@@ -57,16 +57,7 @@ export const menuitems = [
 			</div>
 		</button>
 	</div>
-	<nav
-		:class="{'flex': open, 'hidden': !open}"
-		x-show="open"
-		x-transition:enter="transition ease-out duration-200"
-		x-transition:enter-start="opacity-0 transform scale-90"
-		x-transition:enter-end="opacity-100 transform scale-100"
-		x-transition:leave="transition ease-in duration-200"
-		x-transition:leave-start="opacity-100 transform scale-100"
-		x-transition:leave-end="opacity-0 transform scale-90"
-		class="md:mt-0 lg:pl-8 md:items-center flex-grow pb-4 md:pb-0 flex-col gap-6 transition-all ease-out md:transition-none md:justify-center md:flex-row hidden">
+	<nav class="flex">
 		<div class="flex flex-col flex-grow  gap-4 md:justify-end md:items-center md:flex md:flex-row md:mx-auto">
 			{
 				menuitems.map((item) =>
